# beginner-synth

./: .gitignore  VST_Day1_Coding_Worksheet.md  VST_Modular_Synth_Learning_Guide.md
beginner-synth/: CMakeLists.txt  Plugin_Type_Conversion_Checklist.md  Project_Layout_Explainer.md
beginner-synth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
